tests/snapshots/run_wpt_conformance__litert_cumulativeSum_with_float32_input_and_default_options_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cumulative_sum.https.any.js cumulativeSum with float32 input and default options., litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: CumulativeSum { input: 0, axis: 3, options: Some(MLCumulativeSumOptions { label: "", exclusive: false, reversed: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    cumulativeSumInput: f32[1, 1, 3, 4];
  }

  nodes {
    [cumulativeSumOutput] = cumulativeSum(cumulativeSumInput, exclusive=false, label="", reversed=false);
  }

  outputs { cumulativeSumOutput; }
}
